<?xml version="1.0"?>
<package format="2">
  <name>cmpf</name>
  <version>1.0.0</version>
  <description>Carla Motion Planning Framework (CMPF)</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
