<?xml version="1.0"?>
<package format="2">
  <name>cmpf</name>
  <version>1.0.0</version>
  <description>Carla Motion Planning Framework (CMPF)</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cmpf_behavior_tree</exec_depend>
  <exec_depend>cmpf_bringup</exec_depend>
  <exec_depend>cmpf_common</exec_depend>
  <exec_depend>cmpf_core</exec_depend>
  <exec_depend>cmpf_msgs</exec_depend>
  <exec_depend>cmpf_path_tracking_controller</exec_depend>
  <exec_depend>cmpf_route_planner</exec_depend>
  <export><metapackage/></export>
</package>
