<?xml version="1.0"?>
<package format="2">
  <name>cmpf_behavior_prediction</name>
  <version>0.0.0</version>
  <description>The cmpf_behavior_prediction package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pk@todo.todo">pk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- export plugins -->
    <cmpf_behavior_prediction plugin="cmpf_behavior_prediction.plugins.my_test_plugin.my_test_plugin"/>
  </export>
</package>
