<?xml version="1.0"?>
<package format="2">
  <name>cmpf_bringup</name>
  <version>1.0.0</version>
  <description>The cmpf_bringup package</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
