<?xml version="1.0"?>
<package format="2">
  <name>cmpf_core</name>
  <version>1.0.0</version>
  <description>The cmpf_core package</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>TODO</license>

  <author email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>cmpf_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export></export>
</package>