<?xml version="1.0"?>
<package format="2">
  <name>cmpf_path_tracking_controller</name>
  <version>1.0.0</version>
  <description>The cmpf_path_tracking_controller metapackage</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
